Fix horizontal scrolling class

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,6 +48,7 @@ html, body {
 
 .horizontal-scroll {
     overflow-x: auto;
+    width: 100%;
 }
 
 .dark-red {
